chore: add pre-commit hook

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ rust-version = "1.70.0"
 authors = ["sydo26 <sydoafk@gmail.com>"]
 
 [dependencies]
+
+
+[dev-dependencies]
+cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"]}
