--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,23 @@ jobs:
         if: matrix.benches
         run: cargo test --benches ${{ matrix.features }}
 
+
+  deny-check:
+    name: Deny Check
+    runs-on: ubuntu-latest
+    steps:
+      # Checkout the repository
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      # Install Rust toolchain
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
+
+      # Execute deny check
+      - name: Deny check
+        run: cargo deny check
+
   msrv:
     name: Check MSRV (Minimum Supported Rust Version)
     runs-on: ubuntu-latest
