--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,8 @@ jobs:
       # Install Rust toolchain
       - name: Install Rust
         uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
 
       # Execute deny check
       - name: Deny check
