--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ on:
 
 env:
   RUST_BACKTRACE: full
+  CI: 1
+  CARGO_INCREMENTAL: 0
+  RUST_LOG: "debug"
 
 jobs:
   test:
@@ -26,8 +29,7 @@ jobs:
 
     steps:
       # Checkout the repository
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       # Install Rust toolchain
       - name: Install Rust (${{ matrix.rust }})
@@ -45,36 +47,90 @@ jobs:
         run: cargo test --benches ${{ matrix.features }}
 
 
-  deny-check:
-    name: Deny Check
+  check-license:
+    name: Check License
     runs-on: ubuntu-latest
     steps:
       # Checkout the repository
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       # Install Rust toolchain
       - name: Install Rust
-        uses: dtolnay/rust-toolchain@master
+        uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          profile: minimal
 
-      # Install cargo-deny
+      # Install required tools
       - name: Install cargo-deny
-        run: cargo install cargo-deny
+        run: |
+          cargo install cargo-deny
 
       # Execute deny check
-      - name: Deny check
-        run: cargo deny check
+      - name: Check Licenses
+        run: | 
+          cargo deny check
+
+  fmt:
+    name: Check Formatting
+    env:
+      RUST_LOG: "0"
+    runs-on: ubuntu-latest
+    steps:
+      # Checkout the repository
+      - uses: actions/checkout@v3
+
+      # Install Rust toolchain
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          components: rustfmt
+
+      # Execute rustfmt
+      - name: Check formating with rustfmt
+        run: |
+          cargo fmt --all -- --check
+
+  check:
+    name: Check
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-10.15
+          - windows-latest
+    steps:
+      # Checkout the repository
+      - uses: actions/checkout@v2
+
+      # Install rust toolchain
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+
+      # Use cache to speed up builds
+      - name: Cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/
+            target
+            Cargo.lock
+          key: ${{ runner.os }}-cargo-v4
+
+      # Ensure that all components are compilable.
+      - name: Run cargo check for all targets
+        run: cargo check --color always --all --all-targets
 
   msrv:
     name: Check MSRV (Minimum Supported Rust Version)
     runs-on: ubuntu-latest
     steps:
-
       # Checkout the repository
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       # Get MSRV from package metadata
       - name: Get MSRV from package metadata
