--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ members = ["bin/hooks/*"]
 
 [dependencies]
 
-
 [dev-dependencies]
 rusty-hook = "^0.11.2"
+
+[package.metadata.docs.rs]
+targets = ["x86_64-unknown-linux-gnu"]
