--- a/deny.toml
+++ b/deny.toml
@@ -15,7 +15,8 @@ ignore = []
 unlicensed = "deny"
 allow = [
   "MIT",
-  "Apache-2.0"
+  "Apache-2.0",
+  "Unicode-DFS-2016"
 ]
 deny = []
 copyleft = "deny"
