--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@
 name = "iqoption-rs"
 version = "0.0.1"
 edition = "2021"
-categories = ["api-bindings", "automation"]
-keywords = ["iq", "option", "rust", "api", "wrapper", "iqoption-rs", "library", "scrapper"]
+categories = ["api-bindings"]
+keywords = ["iqoption", "scrapper", "api", "trading", "automation"]
 description = """
 A scrapper that abstracts the IQ Option API calls into a Rust package.
 """
