--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ rust-version = "1.70.0"
 authors = ["sydo26 <sydoafk@gmail.com>"]
 
 [workspace]
-members = ["bin/hooks/*"]
+members = []
 
 [dependencies]
 tokio = { version = "1.29.1", features = [
@@ -36,11 +36,13 @@ tokio = { version = "1.29.1", features = ["full"] }
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
 
-
-
-
-# Only Examples
-
 [[example]]
 name = "signin"
 path = "examples/signin.rs"
+
+# Pre commit hook
+[[bin]]
+name = "pre-commit"
+path = "bin/pre-commit.rs"
+test = false
+bench = false
