--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -44,6 +44,12 @@ jobs:
       - name: Bump version
         run: cargo set-version --locked --workspace --bump ${{ github.event.inputs.version }}
 
+      - name: Create Version Branch
+        run: |
+          VERSION_NAME=$(cargo metadata --format-version 1 | jq -r '.packages[] | select(.name == "iqoption-rs") | .version')
+          BRANCH_NAME=$(echo $VERSION_NAME | sed 's/\./-/g')
+          git checkout -b $BRANCH_NAME
+
       - name: Commit version
         run: |
           git add .
@@ -51,8 +57,16 @@ jobs:
 
       - name: Create tag for version
         run: |
-          METADATA_VERSION=$(cargo metadata --format-version 1 | jq -r '.packages[] | select(.name == "iqoption-rs") | .version')
-          git tag -a "v${METADATA_VERSION}" -m "v${METADATA_VERSION}"
+          git tag -a "v${VERSION_NAME}" -m "v${VERSION_NAME}"
 
       - name: Push latest version
-        run: git push origin main --follow-tags
+        run: git push -u origin $BRANCH_NAME --follow-tags
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: $BRANCH_NAME
+          title: Bump version to ${VERSION_NAME}
+          body: |
+            This PR bumps the version to ${VERSION_NAME}.
