--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -65,12 +65,6 @@ jobs:
         run: git push --set-upstream origin $BRANCH_NAME:$BRANCH_NAME --follow-tags
 
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: $BRANCH_NAME
-          assignees: sydo26
-          reviewers: sydo26
-          title: Bump version to ${VERSION_NAME}
-          body: |
-            This PR bumps the version to ${VERSION_NAME}.
+        run: gh pr create -B main -H $BRANCH_NAME --title 'Bump version to v$VERSION_NAME' --body 'Created by Github action'
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
